--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
   .container{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(110deg, white 50%, #91e651 50%);
+    background: linear-gradient(110deg, rgb(0, 0, 0) 50%, #0c426d 50%);
     font-family: 'Share Tech', sans-serif;
     min-width: 1200px;
     position: relative;
@@ -37,7 +37,7 @@
     transition: all 0.3s ease 0s;
   }
   ul li:hover{
-    background-color: #361d32;
+    background-color: #ededed;
     color: #C4C4C4;
     border-radius: 25px;
     text-decoration: none;
@@ -68,7 +68,7 @@
     font-weight: 500;
     border: none;
     cursor: pointer;
-    background-color: #67ff21;
+    background-color: #0c426d;
     border-radius: 25px;
     transition: width 0.5s;
   }
