--- a/css/inicio.css
+++ b/css/inicio.css
@@ -20,7 +20,7 @@ body {
 /* Encabezado flotante */
 .floating-header {
     position: fixed;
-    top: 20px;
+    top: 0px;
     left: 0;
     right: 0;
     text-align: center;
@@ -30,6 +30,7 @@ body {
     box-shadow: 0 4px 15px rgba(255, 255, 255, 0.624);
     backdrop-filter: blur(5px);
     border-bottom: 3px solid #ffffff;
+    border-radius:  0px 0px 501px 501px;
 }
 
 
