--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,12 @@
+body{
+  text-decoration-color: #ededed;
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
   html{
     font-size: 62.5%;
   }
@@ -10,21 +14,22 @@
     width: 100%;
     height: 100vh;
     background: linear-gradient(110deg, rgb(0, 0, 0) 50%, #0c426d 50%);
-    font-family: 'Share Tech', sans-serif;
     min-width: 1200px;
     position: relative;
+    text-decoration-color: #ededed;
   }
   .logo{
     margin-left: 60px;
     font-weight: 600;
     font-size: 3.8rem;    
-    
+    color: #fffdfc;
   }
   nav{
     padding: 20px 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    text-decoration: #ededed;
   }
   ul li{
     display: inline-block;
@@ -46,6 +51,7 @@
    position: absolute;
    bottom: 30%;
    padding: 0 50px;
+   color: white ;
   }
   header h1{
     font-size: 7rem;
@@ -66,7 +72,7 @@
     outline: none;
     color: #fff;
     font-weight: 500;
-    border: none;
+    border:blanchedalmond;
     cursor: pointer;
     background-color: #0c426d;
     border-radius: 25px;
